--- a/composer.json
+++ b/composer.json
@@ -19,17 +19,19 @@
 		]
 	},
 	"scripts": {
-		"post-install-cmd": [
-			"php artisan optimize"
-		],
-		"post-update-cmd": [
-			"php artisan clear-compiled",
-			"php artisan optimize"
-		],
-		"post-create-project-cmd": [
-			"php artisan key:generate"
-		]
-	},
+        "post-install-cmd": [
+            "$_ artisan optimize"
+        ],
+        "pre-update-cmd": [
+            "$_ artisan clear-compiled"
+        ],
+        "post-update-cmd": [
+            "$_ artisan optimize"
+        ],
+        "post-create-project-cmd": [
+            "$_ artisan key:generate"
+        ]
+    },
 	"config": {
 		"preferred-install": "dist"
 	},
